# logify

./: .env  .env.example  .gitignore  .gitmodules  .golangci.yml  .mockery.yaml  Dockerfile  LogExplorer.tsx  Makefile  README.md  auth.http  dashboard.http  diagram.excalidraw  docker-compose.microservices.yaml  docker-compose.yaml  docker-compose.yml  es_query.json  features.md  features.txt  fluent-bit copy.conf  fluent-bit.conf  go.mod  go.sum  indal.txt  index.html  log.http  project.http  sonar-project.properties  user.http
agent/: README.md  agent  agent copy.go  agent-config.yaml  agent.go  background-agent.service  checkpoint.go  com.background.agent.plist  go.mod  install_mac.sh  install_ubuntu.sh  uninstall_mac.sh  uninstall_ubuntu.sh
apps/admin/: Dockerfile  components.json  (+5 more)
common/: README.md  go.mod  go.sum
config/: config.go
docs/: docs.go  swagger.json  swagger.yaml
examples/: go.mod  main.go
frontend/: IndalCard.tsx  indal.txt  package-lock.json  package.json
indal/: main.go
internal/: menus.go
log-ingester/: main.go
middlewares/: client_auth_middleware.go  storage_limit.go
migrations/: 20250129023142_user.sql  20250205052854_project.sql  20250223054920_roles.sql  20250223054933_permissions.sql  20250223054951_role_permissions.sql  20250223055107_menus.sql  20250223055438_notifications.sql
nginx/: logify.conf
scripts/: generate-types.sh  release.sh  setup.sh
sdks/python/: README.md  pyproject.toml
sdks/python/logify/: __init__.py  client.py  entry.py  errors.py  handler.py
sdks/python/tests/: test_client.py
utils/: main.go
(+900 files in other folders)
