[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logify-sdk"
version = "0.1.0"
description = "Python client for sending logs to a Logify backend"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Indal Yadav", email = "indalkumar56@gmail.com" }]
keywords = ["logging", "logify", "observability", "logs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Logging",
]
# No runtime dependencies — the client uses only the standard library.
dependencies = []

[project.urls]
Homepage = "https://github.com/indalyadav56/logify"
Repository = "https://github.com/indalyadav56/logify"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["logify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
